--- a/src/app.html
+++ b/src/app.html
@@ -3,6 +3,121 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+
+		<!-- Primary Meta Tags -->
+		<title>Sentinel - AI Web3 Safety Platform | Blockchain-Powered Digital Safety</title>
+		<meta
+			name="title"
+			content="Sentinel - AI Web3 Safety Platform | Blockchain-Powered Digital Safety"
+		/>
+		<meta
+			name="description"
+			content="Sentinel combines AI moderation, analytics, and blockchain transparency to create safer digital environments for families and organizations. Real-time content monitoring with immutable blockchain verification."
+		/>
+		<meta
+			name="keywords"
+			content="AI safety, Web3 security, blockchain moderation, digital safety, family protection, content moderation, Algorand, AI-powered safety, online safety, blockchain transparency, digital trust, Web3 safety platform"
+		/>
+		<meta name="author" content="Sentinel Team" />
+		<meta name="robots" content="index, follow" />
+		<meta name="language" content="English" />
+		<meta name="revisit-after" content="7 days" />
+
+		<!-- Open Graph / Facebook -->
+		<meta property="og:type" content="website" />
+		<meta property="og:url" content="https://sentinel.app/" />
+		<meta
+			property="og:title"
+			content="Sentinel - AI Web3 Safety Platform | Blockchain-Powered Digital Safety"
+		/>
+		<meta
+			property="og:description"
+			content="Sentinel combines AI moderation, analytics, and blockchain transparency to create safer digital environments for families and organizations. Real-time content monitoring with immutable blockchain verification."
+		/>
+		<meta property="og:image" content="https://sentinel.app/og-image.png" />
+		<meta property="og:image:width" content="1200" />
+		<meta property="og:image:height" content="630" />
+		<meta property="og:site_name" content="Sentinel" />
+		<meta property="og:locale" content="en_US" />
+
+		<!-- Twitter -->
+		<meta property="twitter:card" content="summary_large_image" />
+		<meta property="twitter:url" content="https://sentinel.app/" />
+		<meta
+			property="twitter:title"
+			content="Sentinel - AI Web3 Safety Platform | Blockchain-Powered Digital Safety"
+		/>
+		<meta
+			property="twitter:description"
+			content="Sentinel combines AI moderation, analytics, and blockchain transparency to create safer digital environments for families and organizations. Real-time content monitoring with immutable blockchain verification."
+		/>
+		<meta property="twitter:image" content="https://sentinel.app/og-image.png" />
+		<meta property="twitter:creator" content="@SentinelApp" />
+		<meta property="twitter:site" content="@SentinelApp" />
+
+		<!-- Additional SEO Meta Tags -->
+		<meta name="theme-color" content="#1a1a1a" />
+		<meta name="msapplication-TileColor" content="#1a1a1a" />
+		<meta name="apple-mobile-web-app-capable" content="yes" />
+		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+		<meta name="apple-mobile-web-app-title" content="Sentinel" />
+		<meta name="application-name" content="Sentinel" />
+		<meta name="mobile-web-app-capable" content="yes" />
+
+		<!-- Security Headers -->
+		<meta http-equiv="X-Content-Type-Options" content="nosniff" />
+		<meta http-equiv="X-Frame-Options" content="DENY" />
+		<meta http-equiv="X-XSS-Protection" content="1; mode=block" />
+		<meta http-equiv="Referrer-Policy" content="strict-origin-when-cross-origin" />
+
+		<!-- Canonical URL -->
+		<link rel="canonical" href="https://sentinel.app/" />
+
+		<!-- PWA Manifest -->
+		<link rel="manifest" href="/manifest.json" />
+
+		<!-- Preconnect to external domains -->
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
+		<!-- JSON-LD Structured Data -->
+		<script type="application/ld+json">
+			{
+				"@context": "https://schema.org",
+				"@type": "WebApplication",
+				"name": "Sentinel",
+				"alternateName": "Sentinel AI Web3 Safety Platform",
+				"description": "AI-powered Web3 safety platform that combines blockchain transparency with real-time content moderation for families and organizations",
+				"url": "https://sentinel.app",
+				"applicationCategory": "SecurityApplication",
+				"operatingSystem": "Web Browser",
+				"offers": {
+					"@type": "Offer",
+					"price": "0",
+					"priceCurrency": "USD"
+				},
+				"creator": {
+					"@type": "Organization",
+					"name": "Sentinel Team"
+				},
+				"keywords": "AI safety, Web3 security, blockchain moderation, digital safety, family protection, content moderation, Algorand, AI-powered safety, online safety, blockchain transparency, digital trust",
+				"featureList": [
+					"AI-powered content moderation",
+					"Blockchain transparency and verification",
+					"Real-time safety monitoring",
+					"Family and organizational dashboards",
+					"Immutable incident recording",
+					"Privacy-preserving architecture",
+					"Algorand blockchain integration",
+					"OpenAI moderation API"
+				],
+				"browserRequirements": "Requires JavaScript. Requires HTML5.",
+				"softwareVersion": "1.0.0",
+				"datePublished": "2024-01-01",
+				"dateModified": "2024-12-19"
+			}
+		</script>
+
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
